[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Global.gd" type="Script" id=1]
[ext_resource path="res://files/Background2.png" type="Texture" id=2]
[ext_resource path="res://files/Background3.png" type="Texture" id=3]
[ext_resource path="res://Theme/Lampshade.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Theme/default_theme.tres" type="Theme" id=5]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=6]
[ext_resource path="res://Scripts/InitiliseConfig.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Global" type="Node" parent="."]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 800.0
margin_bottom = 600.0

[node name="background1" type="TextureRect" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="background2" type="TextureRect" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )

[node name="Title" type="Label" parent="ColorRect"]
margin_left = 48.0
margin_top = 48.0
margin_right = 455.0
margin_bottom = 85.0
rect_min_size = Vector2( 704, 96 )
custom_fonts/font = SubResource( 1 )
text = "The almost finished Game"
align = 1

[node name="Menu" type="VBoxContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.5
margin_top = -105.0
margin_right = 138.5
margin_bottom = 105.0
theme = ExtResource( 5 )
script = ExtResource( 6 )

[node name="InitiliseConfig" type="Button" parent="ColorRect/Menu"]
margin_right = 277.0
margin_bottom = 20.0
rect_min_size = Vector2( 152, 0 )
text = "Generate config file"
script = ExtResource( 7 )

[node name="Control" type="Control" parent="ColorRect/Menu"]
margin_top = 24.0
margin_right = 277.0
margin_bottom = 24.0

[node name="PlayerLabel" type="Label" parent="ColorRect/Menu/Control"]
margin_top = 24.0
margin_right = 277.0
margin_bottom = 38.0
text = "Playername and Image "

[node name="Player" type="HBoxContainer" parent="ColorRect/Menu/Control"]
margin_top = 42.0
margin_right = 277.0
margin_bottom = 66.0

[node name="PlayerName" type="LineEdit" parent="ColorRect/Menu/Control/Player"]
margin_right = 58.0
margin_bottom = 24.0

[node name="PlayerImage" type="Button" parent="ColorRect/Menu/Control/Player"]
margin_left = 62.0
margin_right = 157.0
margin_bottom = 24.0
text = "Select Image"

[node name="BossLabel" type="Label" parent="ColorRect/Menu/Control"]
margin_top = 70.0
margin_right = 277.0
margin_bottom = 84.0
text = "Bossname and Image"

[node name="Boss" type="HBoxContainer" parent="ColorRect/Menu/Control"]
margin_top = 88.0
margin_right = 277.0
margin_bottom = 112.0

[node name="BossName" type="LineEdit" parent="ColorRect/Menu/Control/Boss"]
margin_right = 58.0
margin_bottom = 24.0

[node name="BossImage" type="Button" parent="ColorRect/Menu/Control/Boss"]
margin_left = 62.0
margin_right = 157.0
margin_bottom = 24.0
text = "Select Image"

[node name="StartLabel" type="Label" parent="ColorRect/Menu/Control"]
margin_top = 116.0
margin_right = 277.0
margin_bottom = 130.0
text = "Choose Names and write \"done\" to confirm"

[node name="Start" type="HBoxContainer" parent="ColorRect/Menu/Control"]
margin_top = 134.0
margin_right = 277.0
margin_bottom = 158.0

[node name="ConfirmCode" type="LineEdit" parent="ColorRect/Menu/Control/Start"]
margin_right = 58.0
margin_bottom = 24.0

[node name="Start" type="Button" parent="ColorRect/Menu/Control/Start"]
margin_left = 62.0
margin_right = 145.0
margin_bottom = 24.0
text = "Start Game"

[node name="FileDialogPlayer" type="FileDialog" parent="ColorRect/Menu"]
margin_right = 400.0
margin_bottom = 300.0
rect_min_size = Vector2( 400, 300 )
window_title = "Open a File"
resizable = true
mode = 0
filters = PoolStringArray( "*.png; PNG Images" )

[node name="FileDialogBoss" type="FileDialog" parent="ColorRect/Menu"]
margin_top = 304.0
margin_right = 400.0
margin_bottom = 604.0
rect_min_size = Vector2( 400, 300 )
window_title = "Open a File"
resizable = true
mode = 0
filters = PoolStringArray( "*.png; PNG Images" )

[node name="FileNotFound" type="AcceptDialog" parent="ColorRect/Menu"]
margin_right = 429.0
margin_bottom = 75.0
window_title = "File not found"
dialog_text = "Unable to locate
 C:\\Users\\Ikarus-dvHf\\Github\\tafg\\files\\Boss.cfg"

[connection signal="button_down" from="ColorRect/Menu/InitiliseConfig" to="ColorRect/Menu/InitiliseConfig" method="_on_Initilise_config_button_down"]
[connection signal="button_down" from="ColorRect/Menu/Control/Player/PlayerImage" to="ColorRect/Menu" method="_on_PlayerImage_button_down"]
[connection signal="button_down" from="ColorRect/Menu/Control/Boss/BossImage" to="ColorRect/Menu" method="_on_BossImage_button_down"]
[connection signal="button_down" from="ColorRect/Menu/Control/Start/Start" to="ColorRect/Menu" method="_on_Start_button_down"]
[connection signal="file_selected" from="ColorRect/Menu/FileDialogPlayer" to="ColorRect/Menu" method="_on_FileDialogPlayer_file_selected"]
[connection signal="dir_selected" from="ColorRect/Menu/FileDialogBoss" to="ColorRect/Menu" method="_on_FileDialogBoss_dir_selected"]
